More related work changes

--- a/references.bib
+++ b/references.bib
@@ -1221,6 +1221,20 @@
   keywords = {benchmarking,python}
 }
 
+@thesis{wangEvaluatingSynchronizationOverhead2025,
+  type = {Master of Science (MSc) in Information Technology},
+  title = {Evaluating {{Synchronization Overhead}} for {{Emerging Pointer Chasing Workloads}}},
+  author = {Wang, Daniel},
+  date = {2025},
+  institution = {Uppsala Universitet},
+  location = {Uppsala, Sweden},
+  url = {https://urn.kb.se/resolve?urn=urn:nbn:se:uu:diva-550341},
+  urldate = {2025-06-10},
+  abstract = {DiVA portal is a finding tool for research publications and student theses written at the following 50 universities and research institutions.},
+  langid = {english},
+  file = {/Users/edjg/Zotero/storage/TVA723TY/Wang - 2025 - Evaluating Synchronization Overhead for Emerging Pointer Chasing Workloads.pdf}
+}
+
 @online{whatsNewPython311,
   title = {What’s {{New In Python}} 3.11},
   author = {{Pablo Galindo Salgado}},
