--- a/references.bib
+++ b/references.bib
@@ -623,6 +623,20 @@
   file = {/Users/edjg/Zotero/storage/4AMQL6SQ/Hölzle and Ungar - 1994 - Optimizing dynamically-dispatched calls with run-time type feedback.pdf}
 }
 
+@incollection{Hunt2023,
+  title = {Monkey Patching},
+  booktitle = {A Beginners Guide to Python 3 Programming},
+  author = {Hunt, John},
+  date = {2023},
+  pages = {487--490},
+  publisher = {Springer International Publishing},
+  location = {Cham},
+  doi = {10.1007/978-3-031-35122-8_43},
+  url = {https://doi.org/10.1007/978-3-031-35122-8_43},
+  abstract = {Monkey Patching is a term you might well come across when looking into Python further or when searching the web for Python related concepts. It relates to the ability in Python to extend the functionality associated with a class/type at runtime.},
+  isbn = {978-3-031-35122-8}
+}
+
 @standard{internationalorganizationforstandardizationISOIEC148821998,
   title = {{{ISO}}/{{IEC}} 14882:1998 {{Programming}} Languages — {{C}}++},
   shorttitle = {{{ISO}} / {{IEC}} 14882 International Standard - First Edition 1998-09-01},
@@ -790,6 +804,16 @@
   file = {/Users/edjg/Zotero/storage/GW75VWA5/Lattner et al. - 2021 - MLIR Scaling Compiler Infrastructure for Domain Specific Computation.pdf}
 }
 
+@online{liangUnderstandVtableAssembly,
+  title = {Understand {{C}}++ Vtable from Assembly Code (Part 1)},
+  author = {Liang, Guihao},
+  url = {https://guihao-liang.github.io/2020/05/30/what-is-vtable-in-cpp},
+  urldate = {2025-06-11},
+  abstract = {A glance at vtable implementation},
+  langid = {english},
+  file = {/Users/edjg/Zotero/storage/T325GS7P/what-is-vtable-in-cpp.html}
+}
+
 @inproceedings{lionInvestigatingManagedLanguage2022,
   title = {Investigating {{Managed Language Runtime Performance}}: {{Why}} \{\vphantom\}{{JavaScript}}\vphantom\{\} and {{Python}} Are 8x and 29x Slower than {{C}}++, yet {{Java}} and {{Go}} Can Be {{Faster}}?},
   shorttitle = {Investigating {{Managed Language Runtime Performance}}},
@@ -801,6 +825,15 @@
   eventtitle = {2022 {{USENIX Annual Technical Conference}} ({{USENIX ATC}} 22)},
   langid = {english},
   file = {/Users/edjg/Zotero/storage/P3UA85XD/Lion et al. - 2022 - Investigating Managed Language Runtime Performance Why JavaScript and Python are 8x and 29x slowe.pdf}
+}
+
+@online{llvmprojectLLVMsAnalysisTransform,
+  title = {{{LLVM}}’s {{Analysis}} and {{Transform Passes}}},
+  author = {{LLVM Project}},
+  url = {https://llvm.org/docs/Passes.html#memdep-memory-dependence-analysis},
+  urldate = {2025-06-11},
+  organization = {LLVM 21.0.0git documentation},
+  file = {/Users/edjg/Zotero/storage/ULUXRJQN/Passes.html}
 }
 
 @article{luLinkTimeOptimizationDynamic,
@@ -856,6 +889,24 @@
   url = {https://mlir.llvm.org/docs/},
   urldate = {2025-04-11},
   file = {/Users/edjg/Zotero/storage/F3EKI2E6/docs.html}
+}
+
+@online{mlirteamMLIRIncludeMlir,
+  title = {{{MLIR}}: Include/Mlir/{{Support}}/{{TypeID}}.h {{Source File}}},
+  author = {{MLIR Team}},
+  url = {https://mlir.llvm.org/doxygen/TypeID_8h_source.html},
+  urldate = {2025-06-11},
+  organization = {MLIR Code Documentation},
+  file = {/Users/edjg/Zotero/storage/GFADXFWQ/TypeID_8h_source.html}
+}
+
+@online{mlirteamTraitsMLIR,
+  title = {Traits - {{MLIR}}},
+  author = {{MLIR Team}},
+  url = {https://mlir.llvm.org/docs/Traits/},
+  urldate = {2025-06-11},
+  organization = {MLIR Code Documentation},
+  file = {/Users/edjg/Zotero/storage/75TZDAVX/Traits.html}
 }
 
 @online{nedbatchelderWickedHackPython2008,
@@ -1283,6 +1334,23 @@
   abstract = {Dynamic scripting languages offer programmers increased flexibility by allowing properties of programs to be defined at run-time. Typically, program execution begins with an interpreter where type checks are implemented using conditional statements. Recent JIT compilers have begun removing run-time checks by specializing native code to program properties discovered at JIT time.This paper presents a novel intermediate representation for scripting languages that explicitly encodes types of variables. The dynamic representation is a flow graph, where each node is a specialized virtual instruction and each edge directs program flow based on control and type changes in the program. The interpreter thus performs specialized execution of whole programs. We present techniques for the efficient interpretation of our representation showing speed-ups of greater than 2x over static interpretation, with an average speed-up of approximately 1.3x.},
   isbn = {978-1-60558-635-9},
   file = {/Users/edjg/Zotero/storage/FW38FJTP/Williams et al. - 2010 - Dynamic interpretation for dynamic scripting languages.pdf}
+}
+
+@article{williamsRooflineInsightfulVisual2009a,
+  title = {Roofline: An Insightful Visual Performance Model for Multicore Architectures},
+  shorttitle = {Roofline},
+  author = {Williams, Samuel and Waterman, Andrew and Patterson, David},
+  date = {2009-04-01},
+  journaltitle = {Commun. ACM},
+  volume = {52},
+  number = {4},
+  pages = {65--76},
+  issn = {0001-0782},
+  doi = {10.1145/1498765.1498785},
+  url = {https://dl.acm.org/doi/10.1145/1498765.1498785},
+  urldate = {2025-06-11},
+  abstract = {The Roofline model offers insight on how to improve the performance of software and hardware.},
+  file = {/Users/edjg/Zotero/storage/WYAG7UTZ/Williams et al. - 2009 - Roofline an insightful visual performance model for multicore architectures.pdf}
 }
 
 @article{wilsonSUIFInfrastructureResearch1994,
